// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-data-type should handle moving non-existent data type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`move-data-type should handle moving to non-existent folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`move-data-type should move a data type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
